; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_dell-wmi.c_find_hk_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_dell-wmi.c_find_hk_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dmi_header = type { i32, i32 }

@dell_new_hk_type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dmi_header*, i8*)* @find_hk_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_hk_type(%struct.dmi_header* %0, i8* %1) #0 {
  %3 = alloca %struct.dmi_header*, align 8
  %4 = alloca i8*, align 8
  store %struct.dmi_header* %0, %struct.dmi_header** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.dmi_header*, %struct.dmi_header** %3, align 8
  %6 = getelementptr inbounds %struct.dmi_header, %struct.dmi_header* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 178
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load %struct.dmi_header*, %struct.dmi_header** %3, align 8
  %11 = getelementptr inbounds %struct.dmi_header, %struct.dmi_header* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp sgt i32 %12, 6
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  store i32 1, i32* @dell_new_hk_type, align 4
  %15 = load %struct.dmi_header*, %struct.dmi_header** %3, align 8
  %16 = call i32 @setup_new_hk_map(%struct.dmi_header* %15)
  br label %17

17:                                               ; preds = %14, %9, %2
  ret void
}

declare dso_local i32 @setup_new_hk_map(%struct.dmi_header*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
